force-app/main/default/objects/OrderH__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>OrdersH</relationshipLabel>
    <relationshipName>OrdersH</relationshipName>
    <type>Lookup</type>
</CustomField>