force-app/main/default/objects/OrderH__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>CustomerH__r.First_Name__c &amp;&quot; &quot; &amp; CustomerH__r.Last_Name__c</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>