force-app/main/default/objects/OrderH__c/fields/CustomerH__c.field-meta.xml
<CustomField>
    <fullName>CustomerH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Customer object to link the order to a specific customer (Data type: Lookup Customer).</description>
    <label>CustomerH</label>
    <referenceTo>CustomerH__c</referenceTo>
    <relationshipLabel>OrdersH</relationshipLabel>
    <relationshipName>OrdersH</relationshipName>
    <type>Lookup</type>
</CustomField>