force-app/main/default/objects/OrderH__c/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <description>The requested delivery date and time chosen by the customer (Data type: Date/Time).</description>
    <label>Delivery Date Time</label>
    <type>DateTime</type>
</CustomField>