force-app/main/default/objects/OrderH__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>Special instructions or notes about delivering to this location, such as &quot;Leave at the back door&quot; or &quot;Ring the bell upon arrival&quot;.</description>
    <label>Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>