force-app/main/default/objects/OrderH__c/fields/Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time when the order was placed (Data type: Date/Time).</description>
    <label>Order Date Time</label>
    <type>DateTime</type>
</CustomField>