force-app/main/default/objects/OrderH__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Date_Time__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Delivery_Date_Time__c</columns>
    <columns>Delivery_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>